# sourceress

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  architecture.mermaid  plan.md  pyproject.toml  test_boolean_query.py  test_fetch_profiles.py  test_jd_llm.py  test_linkedin_debug.py  test_linkedin_direct.py  test_linkedin_simple.py  test_linkedin_sourcer.py  test_optimized_query.py  test_profile_extraction.py  test_real_titles.py
.cursor/rules/: overall-guidance.mdc
src/sourceress/: __init__.py  main.py  models.py  tasks.py  workflows.py
src/sourceress/agents/: __init__.py  base.py  excel_writer.py  jd_ingestor.py  key_matcher.py  linkedin_sourcer.py  pitch_generator.py  relevance_scorer.py
src/sourceress/utils/: __init__.py  linkedin_api.py  linkedin_auth.py  llm.py  logging.py  scraping.py
tests/: test_agents.py  test_dummy.py  test_jd_ingestor.py  test_jd_ingestor_manual.py  test_linkedin_auth.py  test_scraping.py  test_workflow.py
