[project]
name = "sourceress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "loguru>=0.7",
    "click>=8.1",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "playwright>=1.44",
    "langchain>=0.2",
    "transformers>=4.41",
    "huggingface_hub>=0.23",
    "aiohttp>=3.9",
    "crewai>=0.21",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.3",
    "isort>=5.13",
    "mypy>=1.10",
    "pre-commit>=3.6",
]
